force-app/main/default/objects/loan__Group__c/loan__Group__c.object-meta.xml
<CustomObject>
    <description>SHG</description>
    <label>Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>