force-app/main/default/objects/loan__Group__c/fields/loan__Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>loan__Address_Line_1__c</fullName>
    <label>Address Line 1</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>