force-app/main/default/objects/loan__Group__c/fields/loan__Manager__c.field-meta.xml
<CustomField>
    <fullName>loan__Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Groups</relationshipName>
    <type>Lookup</type>
</CustomField>