force-app/main/default/objects/loan__Group__c/fields/loan__Source_Loan_Officer__c.field-meta.xml
<CustomField>
    <fullName>loan__Source_Loan_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Loan Officer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>loan__Staff__c.loan__Branch__c</field>
            <operation>equals</operation>
            <valueField>$Source.loan__Office__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>loan__Staff__c</referenceTo>
    <relationshipLabel>Groups</relationshipLabel>
    <relationshipName>Groups</relationshipName>
    <type>Lookup</type>
</CustomField>