force-app/main/default/objects/loan__Group__c/validationRules/loan__Center_Belongs_To_Branch.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Center_Belongs_To_Branch</fullName>
    <active>true</active>
    <errorConditionFormula>(loan__Center__c  &lt;&gt; NULL) &amp;&amp; (loan__Center__r.loan__Branch__r.Id  &lt;&gt;  loan__Office__r.Id)</errorConditionFormula>
    <errorMessage>User entered Center does not belong to this Branch.</errorMessage>
</ValidationRule>