force-app/main/default/objects/loan__Group__c/validationRules/loan__City_Special_char_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__City_Special_char_check</fullName>
    <active>true</active>
    <description>City_Special_char_check</description>
    <errorConditionFormula>NOT(REGEX(   loan__City__c , &quot;^[a-zA-Z\\s]*$&quot;))</errorConditionFormula>
    <errorDisplayField>loan__City__c</errorDisplayField>
    <errorMessage>City should not include special characters</errorMessage>
</ValidationRule>