force-app/main/default/objects/loan__Group__c/validationRules/loan__ExternalID_Special_char_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__ExternalID_Special_char_check</fullName>
    <active>true</active>
    <description>ExternalID_Special_char_check</description>
    <errorConditionFormula>NOT(REGEX(    loan__External_ID__c , &quot;^[a-zA-Z0-9\\s]*$&quot;))</errorConditionFormula>
    <errorDisplayField>loan__External_ID__c</errorDisplayField>
    <errorMessage>ID should not include special characters</errorMessage>
</ValidationRule>