force-app/main/default/objects/loan__Group__c/validationRules/loan__Telephone_Special_char_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Telephone_Special_char_check</fullName>
    <active>true</active>
    <description>Telephone_Special_char_check</description>
    <errorConditionFormula>NOT(REGEX(     loan__Telephone_No__c , &quot;^[a-zA-Z0-9\\s]*$&quot;))</errorConditionFormula>
    <errorDisplayField>loan__Telephone_No__c</errorDisplayField>
    <errorMessage>Telephone no. should not include special characters</errorMessage>
</ValidationRule>