force-app/main/default/objects/loan__Group__c/validationRules/loan__Zipcode_check.validationRule-meta.xml
<ValidationRule>
    <fullName>loan__Zipcode_check</fullName>
    <active>true</active>
    <description>Zipcode_check</description>
    <errorConditionFormula>NOT(REGEX(  loan__Zipcode__c , &quot;\\d{6}&quot;))</errorConditionFormula>
    <errorDisplayField>loan__Zipcode__c</errorDisplayField>
    <errorMessage>Invalid Zipcode</errorMessage>
</ValidationRule>